# crunch

./: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
crates/common/: Cargo.toml
crates/common/src/: env.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: compaction.rs  engine.rs  env.rs  error.rs  lib.rs  memtable.rs  segment.rs  sparse_index.rs  store.rs  test.rs  util.rs
crates/kv/: Cargo.toml
crates/kv-client/: Cargo.toml
crates/kv-client/src/: main.rs  protocol.rs
crates/kv/src/: main.rs  protocol.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
src/: compaction.rs  database.rs  engine.rs  env.rs  main.rs  memtable.rs  segment.rs  sparse_index.rs  store.rs  util.rs
