[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.95"
bloom = "0.2.0"
clap = { version = "4.5.26", features = ["derive"] }
crunch-common.path = "./crates/common"
crunch-engine.path = "./crates/engine"
env_logger = "0.11.6"
log = "0.4.22"
nom = "7.1.3"
pretty_assertions = "1.4.1"
rand = "0.8.5"
thiserror = "2.0.9"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
walkdir = "2.3.2"
