[package]
name = "crunch-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bloom.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
